<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="accept">Accept</string>
    <string name="action_settings">Settings</string>
    <string name="alert">Alerts</string>
    <string name="app_name">El Puntal</string>
    <string name="audio_notification">Notification Tone</string>
    <string name="audio_notification_description">Select a tone for the Chief\'s notifications</string>
    <string name="balance">Economic balance</string>
    <string name="bonus">Bunus</string>
    <string name="bonus_colon">Bunus:</string>
    <string name="cancel">Cancel</string>
    <string name="category_application">Application Settings</string>
    <string name="choose_option">Choose an option</string>
    <string name="choose_player">Choose player</string>
    <string name="choose_round">Choose Round:</string>
    <string name="classification">Classification</string>
    <string name="coming_soon">Coming soon</string>
    <string name="community">My Community</string>
    <string name="confirm_delete_notifications">Do you want to delete all notifications?</string>
    <string name="confirmation">Confirmation</string>
    <string name="connect">Update information</string>
    <string name="connected">Connected</string>
    <string name="connection_error">Connection error</string>
    <string name="connection_error_reconect">heck your settings and try again</string>
    <string name="current_round">Current Round</string>
    <string name="database_download">Downloading community data</string>
    <string name="database_store">Storing community data</string>
    <string name="date_received">Date:</string>
    <string name="delete_notifications">Delete notifications</string>
    <string name="description" />
    <string name="description_vibrate">Vibrate on incoming notifications</string>
    <string name="detailed_notification_description">Detailed message</string>
    <string name="error_server_GCM">Server Connection Error</string>
    <string name="farewell">Farewell</string>
    <string name="force_conection">Server registration</string>
    <string name="gamer">Gamer</string>
    <string name="gastos">Expense</string>
    <string name="gcm_notification">Notification from the Chief</string>
    <string name="gcm_notification_ticker">New message from the Chief</string>
    <string name="general">General:</string>
    <string name="general_without_colon">General</string>
    <string name="goles">Goals:</string>
    <string name="host">Host</string>
    <string name="hour">Hour</string>
    <string name="info">Info</string>
    <string name="information">Information</string>
    <string name="incomes">Income</string>
    <string name="last_round">Last round</string>
    <string name="load_info">Loading information</string>
    <string name="load_gamers">Loading gamers:</string>
    <string name="load_players">Loading football players</string>
    <string name="maintenance_message_sent">Message sent</string>
    <string name="market">Market</string>
    <string name="menu_sort_name">Sort by name</string>
    <string name="menu_sort_owner">Sort by owner</string>
    <string name="menu_sort_team">Sort by team</string>
    <string name="money">Cash:</string>
    <string name="my_players">Players</string>
    <string name="my_team">My Team</string>
    <string name="navigation_drawer_closed">Navigation drawer opened</string>
    <string name="navigation_drawer_open">Navigation drawer closed</string>
    <string name="no_connection">No connection</string>
    <string name="no_gamer_selected">You do not have choose which gamer is you yet</string>
    <string name="no_gamers_loaded">The community is empty</string>
    <string name="no_players_loaded">Information of players is missing</string>
    <string name="no_remos_pattern">This gamer has not been hitted by the oar (yet)</string>
    <string name="no_signings">Player not signed by anyone</string>
    <string name="num_of_players">Players: </string>
    <string name="notifications">Notifications from the Chief</string>
    <string name="ok">OK</string>
    <string name="other_round">Other round</string>
    <string name="owner">Owner: </string>
    <string name="password">Password</string>
    <string name="pick_my_team">My team</string>
    <string name="pick_my_team_description">Choose who you are in order to get direct access to your personal team data</string>
    <string name="pick_no_team">You have to choose at least one option</string>
    <string name="players">Players</string>
    <string name="points">Points:</string>
    <string name="points_round">Points round:</string>
    <string name="points_general">Points general:</string>
    <string name="port">Port</string>
    <string name="portero">Goalkeeper:</string>
    <string name="position">Position: </string>
    <string name="read">Read</string>
    <string name="read_not">Not read</string>
    <string name="recognize">Voice Search</string>
    <string name="remos">Sanctions</string>
    <string name="remos_colon">Sanctions:</string>
    <string name="remos_pattern">€_sanction_ because of _motivo_ in _jornada_</string>
    <string name="ranking">Ranking:</string>
    <string name="ranking_round">Ranking round:</string>
    <string name="ranking_general">Ranking general:</string>
    <string name="round">Round:</string>
    <string name="sales">Sales</string>
    <string name="sales_colon">Sales:</string>
    <string name="search_label">Search</string>
    <string name="search_hint">Search player</string>
    <string name="send">Send</string>
    <string name="settings">Settings</string>
    <string name="signings">Signings</string>
    <string name="signings_colon">Signings:</string>
    <string name="signings_pattern">_precio_€ in _jornada_ _linea_ Buyer: _comprador_ _linea_ Seller: _vendedor_</string>
    <string name="score">Scores</string>
    <string name="starting_round">Jornada Inicial</string>
    <string name="state">Estado:</string>
    <string name="subject">Subject</string>
    <string name="talk_now">Speak now…</string>
    <string name="time_received">Time</string>
    <string name="ultimo_general_not_allowed">Not allowed to get money</string>
    <string name="ultimo_general">Last in general:</string>
    <string name="ultimo_jornada">Last in roung:</string>
    <string name="unconnect">Unconnect</string>
    <string name="update_wifi">Update only with Wifi</string>
    <string name="update_with_wifi_description">Download new app versions only with an active Wifi connection</string>
    <string name="update_wihtout_wifi_description">Download new app versions at any moment</string>
    <string name="user">User</string>
    <string name="vibrate">Vibrate</string>
    <string name="voice_installation">Google Voice Recognition must be installed</string>
    <string name="waiting">Waiting</string>


</resources>
