<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/category_application">
        <Preference
            android:title="@string/pick_my_team"
            android:summary="@string/pick_my_team_description">
            <intent android:action="com.rukiasoft.androidapps.comunioelpuntal.action.SELECT_WHO_YOU_ARE" />
        </Preference>
        <CheckBoxPreference
            android:key="option_update_wifi"
            android:title="@string/update_wifi"
            android:summaryOn="@string/update_with_wifi_description"
            android:summaryOff="@string/update_wihtout_wifi_description"
            android:defaultValue="true" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/notifications">
        <CheckBoxPreference
            android:key="option_vibrate"
            android:title="@string/vibrate"
            android:summary="@string/description_vibrate"
            android:defaultValue="true" />
        <RingtonePreference
            android:showDefault="true"
            android:key="option_notification"
            android:title="@string/audio_notification"
            android:summary="@string/audio_notification_description"
            android:ringtoneType="notification"/>
    </PreferenceCategory>
</PreferenceScreen>