<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:comunioelpuntal="http://schemas.android.com/apk/res-auto">
    <item
        android:actionViewClass="android.widget.SearchView"
        android:id="@+id/menu_item_search"
        comunioelpuntal:showAsAction="ifRoom"
        android:title="@string/search_hint"
        comunioelpuntal:actionViewClass="android.support.v7.widget.SearchView"/>
    <item
        android:id="@+id/menu_sort_name"
        android:title="@string/menu_sort_name"
        comunioelpuntal:showAsAction="never" />
    <item
        android:id="@+id/menu_sort_team"
        android:title="@string/menu_sort_team"
        comunioelpuntal:showAsAction="never" />
    <item
        android:id="@+id/menu_sort_owner"
        android:title="@string/menu_sort_owner"
        comunioelpuntal:showAsAction="never" />
</menu>
   
