<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/color_header">

    <TextView
        android:id="@+id/bonus_header_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/bonus_colon"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/text_over_header"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/bonus_header_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/bonus_header_label"
        android:layout_toRightOf="@+id/bonus_header_label"
        android:paddingLeft="10dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/text_over_header"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/bonus_header_goles_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bonus_header_label"
        android:layout_alignParentLeft="true"
        android:paddingLeft="10dp"
        android:text="@string/goles"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/text_over_header"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/bonus_header_goles_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/bonus_header_goles_label"
        android:layout_toRightOf="@+id/bonus_header_goles_label"
        android:paddingLeft="10dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/text_over_header"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/bonus_header_portero_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/bonus_header_goles_label"
        android:paddingLeft="10dp"
        android:text="@string/portero"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/text_over_header"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/bonus_header_portero_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/bonus_header_portero_label"
        android:layout_toRightOf="@+id/bonus_header_portero_label"
        android:paddingLeft="10dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/text_over_header"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/bonus_header_ultimo_jornada_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/bonus_header_portero_label"
        android:paddingLeft="10dp"
        android:text="@string/ultimo_jornada"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/text_over_header"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/bonus_header_ultimo_jornada_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/bonus_header_ultimo_jornada_label"
        android:layout_toRightOf="@+id/bonus_header_ultimo_jornada_label"
        android:paddingLeft="10dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/text_over_header"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/bonus_header_ultimo_general_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/bonus_header_ultimo_jornada_label"
        android:paddingLeft="10dp"
        android:paddingBottom="10dp"
        android:text="@string/ultimo_general"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/text_over_header"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/bonus_header_ultimo_general_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/bonus_header_ultimo_general_label"
        android:layout_toRightOf="@+id/bonus_header_ultimo_general_label"
        android:paddingLeft="10dp"
        android:paddingBottom="10dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/text_over_header"
        android:textStyle="bold"/>

</RelativeLayout>