<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/balance_ingresos_main_layout"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:baselineAligned="false">

    <TextView
        android:id="@+id/balance_ingresos_ingresos_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_gravity="center_vertical"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:text="@string/incomes"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/text_information"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/balance_ingresos_puntos_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/balance_ingresos_ingresos_label"
        android:layout_gravity="center_vertical"
        android:paddingBottom="5dp"
        android:paddingLeft="15dp"
        android:paddingRight="10dp"
        android:paddingTop="5dp"
        android:text="@string/points"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/text_over_background"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/balance_ingresos_puntos_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/balance_ingresos_puntos_label"
        android:layout_toRightOf="@+id/balance_ingresos_puntos_label"
        android:layout_gravity="center"
        android:paddingLeft="20dp"
        android:paddingRight="10dp"
        android:paddingTop="0dp"
        android:paddingBottom="10dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/text_over_background"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/balance_ingresos_bonus_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/balance_ingresos_puntos_label"
        android:layout_gravity="center_vertical"
        android:paddingBottom="5dp"
        android:paddingLeft="15dp"
        android:paddingRight="10dp"
        android:paddingTop="5dp"
        android:text="@string/bonus_colon"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/text_over_background"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/balance_ingresos_bonus_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/balance_ingresos_bonus_label"
        android:layout_toRightOf="@+id/balance_ingresos_bonus_label"
        android:layout_gravity="center"
        android:paddingLeft="20dp"
        android:paddingRight="10dp"
        android:paddingTop="0dp"
        android:paddingBottom="10dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/text_over_background"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/balance_ingresos_ventas_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/balance_ingresos_bonus_label"
        android:layout_gravity="center_vertical"
        android:paddingBottom="20dp"
        android:paddingLeft="15dp"
        android:paddingRight="10dp"
        android:paddingTop="5dp"
        android:text="@string/sales_colon"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/text_over_background"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/balance_ingresos_ventas_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/balance_ingresos_ventas_label"
        android:layout_toRightOf="@+id/balance_ingresos_ventas_label"
        android:layout_gravity="center"
        android:paddingLeft="20dp"
        android:paddingRight="10dp"
        android:paddingTop="0dp"
        android:paddingBottom="20dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/text_over_background"
        android:textStyle="bold" />

</RelativeLayout>