<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayoutBonusItem"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/player_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:contentDescription="@string/description"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/text_over_background"
        android:textStyle="bold"/>

    <ImageView
        android:id="@+id/shield_view"
        android:adjustViewBounds="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="5dip"
        android:paddingTop="5dip"
        android:paddingRight="5dip"
        android:paddingLeft="5dip"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="5dip"
        android:maxHeight="64dip"
        android:maxWidth="64dip"
        android:scaleType="fitXY"
        android:contentDescription="@string/description" />

    <TextView
        android:id="@+id/player_owner_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/player_name"
        android:layout_alignParentLeft="true"
        android:paddingLeft="10dip"
        android:paddingTop="10dip"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/text_over_background"
        android:text="@string/owner"/>

    <TextView
        android:id="@+id/player_owner_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/player_owner_label"
        android:layout_toRightOf="@+id/player_owner_label"
        android:longClickable="false"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/text_over_background"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/player_position_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/player_owner_label"
        android:paddingLeft="10dp"
        android:text="@string/position"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/text_over_background"/>

    <TextView
        android:id="@+id/player_position_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/player_position_label"
        android:layout_toRightOf="@+id/player_position_label"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/text_over_background"/>

    <TextView
        android:id="@+id/team_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/shield_view"
        android:paddingBottom="5dp"
        android:paddingRight="10dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/text_over_background"/>

</RelativeLayout>